<resources>
    <string name="app_name">Xarxa IES Doctor Balmis</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Login</string>
    <string name="portada_xarxa">Portada de la Xarxa</string>
    <string name="titulo_drawer">Xarxa</string>
    <string name="derechos">Todos los derechos reservados</string>
    <string name="entrega">Entrega</string>
    <string name="devolucion">Devolución</string>
    <string name="localizacion">Localización</string>
    <string name="busqueda_libros">Búsqueda de libros</string>
    <string name="icono_camara">Icono cámara</string>
    <string name="inicio">Inicio</string>
    <string name="curso">CURSO</string>
    <string name="nombre_apellido1">Nombre Apellido1</string>
    <string name="lote_entregado">Lote entregado</string>
    <string name="devuelto">Devuelto</string>
    <string name="completo">Completo</string>
    <string name="alumnos">Alumnos</string>
    <string name="search">Search</string>
    <string name="escanear">Escanear</string>
    <string name="informacion_alumno">Información del alumno</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="nia">NIA</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="estado_matriculacion">Estado de matriculación</string>
    <string name="curso_minusculas">Curso</string>
    <string name="grupo">Grupo</string>
    <string name="pertenece_xarxa">Miembro de la xarxa</string>
    <string name="incidencias">Incidencias</string>
    <string name="entrega_lote">Entrega de lotes</string>
    <string name="devolucion_lote">Devolución de lotes</string>
    <string name="devolucion_libros">Devolución de libros</string>
    <string name="observaciones">Observaciones</string>
    <string name="aceptar">Aceptar</string>
    <string name="libro">Libro</string>
    <string name="yes">Yes</string>
    <string name="chequea_los_libros_a_devolver">CHEQUEA LOS LIBROS A DEVOLVER</string>
    <string name="añadir_lote">Añadir lote</string>
    <string name="modificar_lote">Modificar lote</string>
    <string name="cancelar">Cancelar</string>
    <string name="libros_lote">Libros del lote X</string>
    <string name="editorial">Editorial</string>
    <string name="si">Sí</string>
</resources>