<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/entregaCard"
        android:layout_width="220dp"
        android:layout_height="90dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/entregaButton"
            style="@style/Widget.MyApp.Button"
            android:text="@string/entrega"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/devolucionCard"
        android:layout_width="220dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entregaCard">

        <Button
            android:id="@+id/devolucionButton"
            style="@style/Widget.MyApp.Button"
            android:text="@string/devolucion" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/localizacionCard"
        android:layout_width="220dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/devolucionCard">

        <Button
            android:id="@+id/localizacionButton"
            style="@style/Widget.MyApp.Button"
            android:text="@string/localizacion" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/busquedaLibrosCard"
        android:layout_width="220dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/localizacionCard">

        <Button
            android:id="@+id/busquedaLibrosButton"
            style="@style/Widget.MyApp.Button"
            android:text="@string/busqueda_libros" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

