<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/devolucionLotesCardView"
        style="@style/Widget.MyApp.CardViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/devolucionLotesTextView"
            style="@style/Widget.MyApp.TextView"
            android:text="@string/devolucion_lote" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/grupoActualDevolucionCardView"
        style="@style/Widget.MyApp.CardViewSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devolucionLotesCardView">

        <TextView
            android:id="@+id/grupoActualDevolucionTextView"
            style="@style/Widget.MyApp.TextView" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/alumnosTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:text="@string/alumnos"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupoActualDevolucionCardView" />

    <TextView
        android:id="@+id/loteDevueltoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/devuelto"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toStartOf="@id/loteCompletoTextView"
        app:layout_constraintStart_toEndOf="@id/alumnosTextView"
        app:layout_constraintTop_toBottomOf="@+id/grupoActualDevolucionCardView" />

    <TextView
        android:id="@+id/loteCompletoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:text="@string/completo"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupoActualDevolucionCardView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAlumnosDevolucion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alumnosTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
